2010-08-03  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Remove internal deps.
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckLaunchDelegate.java (getCommandArray): API changes. 
	(initializeView): Likewise.
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckPlugin.java: Remove internals use. 
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckToolPage.java (createControl): Version is now passed to page.
	(initializeFrom): Likewise.
	(performApply): Likewise.
	(isValid): Likewise.
	(setDefaults): Likewise.
	(setValgrindVersion): Likewise.

2010-07-26  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Bump version to 0.7.0.
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckLaunchDelegate.java: Remove dependence on
	internal Valgrind launch delegate.

2009-09-28  Elliott Baron  <ebaron@fedoraproject.org>

	#290597
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckLaunchConstants.java: Changed alignment option.
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckLaunchDelegate.java (getCommandArray): Likewise. 
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/MemcheckToolPage.java: Likewise. 

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind: Removed.
	* META-INF/MANIFEST.MF: Bump version to 0.3.0.

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	Bug #285861

	* plugin.properties: Change Provider to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/memcheck: Removed.
	* src/org/eclipse/linuxtools/internal/valgrind/memcheck: New package.
	* .project: Added API analysis.
	* META-INF/MANIFEST.MF: Export internal package.
	* plugin.xml: Updated class references.

2009-07-09  Elliott Baron  <ebaron@redhat.com>

	* MemcheckToolPage.java: Display version exceptions only in tab's errorMessage.

2009-07-07  Elliott Baron  <ebaron@redhat.com>
